--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -6,9 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Scene">
 
+    <ImageButton
+        android:id="@+id/bg_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#244573" />
+
     <LinearLayout
         android:id="@+id/inventory"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="0dp"
@@ -58,21 +64,12 @@
             android:src="@drawable/black"
             app:backgroundTint="#000000" />
 
-        <ImageButton
-            android:id="@+id/inv_5"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight=".2"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/black"
-            app:backgroundTint="#000000" />
     </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/roomView"
         android:name="com.example.far_faraway.RoomOne"
-        android:layout_width="631dp"
+        android:layout_width="958dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -81,7 +78,19 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:layout_toStartOf="@+id/inventory"
+        android:layout_toStartOf="@+id/imageView"
         tools:layout="@layout/fragment_room_one" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toStartOf="@+id/inventory"
+        app:srcCompat="@drawable/bg_indicator_1" />
 
 </RelativeLayout>
