--- a/app/src/main/res/layout/fragment_room_one.xml
+++ b/app/src/main/res/layout/fragment_room_one.xml
@@ -7,93 +7,96 @@
     android:layout_height="match_parent"
     tools:context=".RoomOne">
 
-    <com.example.far_faraway.Puzzle
-        android:id="@+id/firstSigns"
-        android:layout_width="174dp"
-        android:layout_height="121dp"
-        android:layout_marginTop="224dp"
-        android:background="@drawable/pnc"
-        android:contentDescription="@string/app_name"
+    <ImageView
+        android:id="@+id/bg_main"
+        android:layout_width="1920px"
+        android:layout_height="1120px"
+        android:src="@drawable/bg_main_one"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.far_faraway.Puzzle
+        android:id="@+id/firstSigns"
+        android:layout_width="123dp"
+        android:layout_height="155dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.275" />
 
     <com.example.far_faraway.Puzzle
         android:id="@+id/firstPipes"
-        android:layout_width="174dp"
-        android:layout_height="121dp"
-        android:layout_marginTop="96dp"
-        android:background="@drawable/pnc"
+        android:layout_width="132dp"
+        android:layout_height="110dp"
         android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintHorizontal_bias="0.282"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
 
     <com.example.far_faraway.Puzzle
         android:id="@+id/firstLights"
-        android:layout_width="96dp"
-        android:layout_height="168dp"
-        android:layout_marginTop="76dp"
-        android:background="@drawable/pnc"
+        android:layout_width="76dp"
+        android:layout_height="111dp"
         android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.692"
+        app:layout_constraintHorizontal_bias="0.682"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283" />
+
+    <com.example.far_faraway.Puzzle
+        android:id="@+id/firstCloset"
+        android:layout_width="117dp"
+        android:layout_height="158dp"
+        android:background="@drawable/trash"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26" />
 
     <com.example.far_faraway.Puzzle
         android:id="@+id/firstTable"
-        android:layout_width="120dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="244dp"
-        android:background="@drawable/pnc"
+        android:layout_width="195dp"
+        android:layout_height="131dp"
         android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.example.far_faraway.Object
-        android:id="@+id/firstCard"
-        android:layout_width="59dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/card"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.873"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
 
     <com.example.far_faraway.Holder
         android:id="@+id/firstReader"
         android:layout_width="49dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="120dp"
+        android:layout_height="59dp"
         android:background="@drawable/trash"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintHorizontal_bias="0.601"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.example.far_faraway.Holder
-        android:id="@+id/firstCloset"
-        android:layout_width="109dp"
-        android:layout_height="109dp"
-        android:layout_marginTop="96dp"
-        android:background="@drawable/trash"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.908"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38" />
 
     <com.example.far_faraway.Holder
         android:id="@+id/firstFlower"
         android:layout_width="60dp"
         android:layout_height="58dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginStart="208dp"
+        android:layout_marginTop="248dp"
         android:background="@drawable/flower_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
